Adding delete user endpoint + moving models under core
