# core/endpoints.go
@@ -1,6 +1,6 @@
 package core
 
-import "github.com/Bruary/staff-scheduling/models"
+import "github.com/Bruary/staff-scheduling/core/models"
 
 type Endpoint struct {
 	Path   string
@@ -16,4 +16,5 @@ var Endpoints = map[Endpoint]EndpointConfig{
 	{Path: "/api/v1/signup", Method: "POST"}:         {RequireJWT: false, AccessLevel: models.Basic},
 	{Path: "/api/v1/login", Method: "POST"}:          {RequireJWT: false, AccessLevel: models.Basic},
 	{Path: "/api/v1/user/permission", Method: "PUT"}: {RequireJWT: true, AccessLevel: models.Admin},
+	{Path: "/api/v1/user", Method: "DELETE"}:         {RequireJWT: true, AccessLevel: models.Admin},
 }
