# docs/swagger.json
@@ -32,7 +32,7 @@
                 }
             }
         },
-        "/api/v1/user": {
+        "/api/v1/signup": {
             "post": {
                 "produces": [
                     "application/json"
@@ -59,6 +59,62 @@
                     }
                 }
             }
+        },
+        "/api/v1/user": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete user",
+                "operationId": "delete-user",
+                "parameters": [
+                    {
+                        "description": "delete user request",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DeleteUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DeleteUserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/permission": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update user permission level",
+                "operationId": "update-user-permission-level",
+                "parameters": [
+                    {
+                        "description": "update user permission request",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserPermissionLevelRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserPermissionLevelResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -76,7 +132,7 @@
         "auth.LoginResponse": {
             "type": "object",
             "properties": {
-                "baseResponse": {
+                "base_response": {
                     "$ref": "#/definitions/models.BaseResponse"
                 },
                 "token": {
@@ -110,10 +166,10 @@
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
@@ -124,7 +180,48 @@
         "models.CreateUserResponse": {
             "type": "object",
             "properties": {
-                "baseResponse": {
+                "base_response": {
+                    "$ref": "#/definitions/models.BaseResponse"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
+        "models.DeleteUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.DeleteUserResponse": {
+            "type": "object",
+            "properties": {
+                "base_response": {
+                    "$ref": "#/definitions/models.BaseResponse"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
+        "models.UpdateUserPermissionLevelRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "permission_level": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateUserPermissionLevelResponse": {
+            "type": "object",
+            "properties": {
+                "base_response": {
                     "$ref": "#/definitions/models.BaseResponse"
                 },
                 "user": {
@@ -144,13 +241,13 @@
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
